# chat-diary

./: .session  PRODUCT_DESIGN.md  README.md  README_CN.md  index.html  package.json  wdio.conf.ts
.github/workflows/: release.yml
e2e/: 01-setup.e2e.ts  02-dual-space.e2e.ts  03-diary-crud.e2e.ts  04-search.e2e.ts  05-articles.e2e.ts  06-tags.e2e.ts  07-favorites.e2e.ts  08-stats-achievements.e2e.ts  09-settings.e2e.ts  10-password-management.e2e.ts  11-export.e2e.ts  12-random-memory.e2e.ts  13-image-gallery.e2e.ts  14-ai-summary.e2e.ts  15-article-ui.e2e.ts  16-tag-ui.e2e.ts  17-settings-ui.e2e.ts  18-context-menu-ui.e2e.ts  19-image-ui.e2e.ts  20-input-resize.e2e.ts  99-cleanup.e2e.ts  TEST_PLAN.md  helpers.ts  setup-and-login.e2e.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  telegram.rs  wechat.rs
src-tauri/src/commands/: ai.rs  auth.rs  diary.rs  export.rs  favorites.rs  media.rs  mod.rs  settings.rs  stats.rs  tags.rs  telegram.rs  url_meta.rs  wechat.rs
src-tauri/src/crypto/: aes.rs  argon2_kdf.rs  file_crypto.rs  master_key.rs  mod.rs
src-tauri/src/db/: connection.rs  diary_repo.rs  file_repo.rs  media_repo.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/media/: mod.rs  storage.rs  thumbnail.rs
src/assets/moods/: index.ts
src/components/auth/: LoginScreen.tsx  (+1 more)
src/lib/: constants.ts  i18n.ts  ipc.ts  theme.ts  types.ts
src/stores/: authStore.ts  diaryStore.ts  uiStore.ts
src/styles/: index.css
(+25 files in other folders)
